--- a/.gitignore
+++ b/.gitignore
@@ -98,13 +98,17 @@ $RECYCLE.BIN/
 .env
 
 # Include all .properties files globally
-*.properties
+!*.properties
 
 # Exclude specific .properties files from tracking
-src/main/resources/exchange.rate.properties
-src/main/resources/mail.properties
-src/main/resources/mail-dev.properties
-src/main/resources/secrets.properties
+/src/main/resources/exchange.rate.properties
+/src/main/resources/mail.properties
+/src/main/resources/mail-dev.properties
+/src/main/resources/secrets.properties
+
+# Include the src/main/resources directory explicitly
+!src/main/resources/
+!src/main/resources/**/*.properties
 
 # Ignore all .yml files except application.yml (if used)
 *.yml
@@ -133,7 +137,6 @@ src/main/resources/certs/
 # =====================
 /*.bak
 *.swp
-
 
 # Frontend
 # ==========================
