--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ app.companyPage=http://localhost:4000
 app.admin.email=user@moneytransfer.com
 app.admin.password=P@ssword1$
 app.admin.user.roles=ADMIN
-app.logoUrl=${app.companyPage}/logo.png
+app.logoUrl=${app.companyPage}/logo192.png
 endpoint.resetPasswordUrl=${app.companyPage}${endpoint.password}${endpoint.password.reset}
 
 spring.profiles.active=dev
