--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,7 @@ springdoc.api-docs.path=/api/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 
-auth.whitelist.urls=${springdoc.api-docs.path}/**,/swagger-ui/**,/h2-console/**
+auth.whitelist.urls=${springdoc.api-docs.path}/**,/swagger-ui/**,/h2-console/**,/**
 
 #--------------------GOOGLE OAUTH CREDENTIALS-----------------
 oauth.client.id = 458051927263-8cjgc9k6e98gtosb54458q92jgoh58ev.apps.googleusercontent.com
