--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,11 @@
 spring.application.name=money-transfer
 
 app.companyName=Fast Cash
-app.companyPage=http://localhost:4000
+app.companyPage=http://localhost:8085
 app.admin.email=user@moneytransfer.com
 app.admin.password=P@ssword1$
 app.admin.user.roles=ADMIN
-app.logoUrl=${app.companyPage}/logo192.png
+app.logoUrl=${app.companyPage}/logo512.png
 endpoint.resetPasswordUrl=${app.companyPage}${endpoint.password}${endpoint.password.reset}
 
 spring.profiles.active=dev
@@ -38,7 +38,10 @@ springdoc.api-docs.path=/api/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 
-auth.whitelist.urls=${springdoc.api-docs.path}/**,/swagger-ui/**,/h2-console/**,/**
+auth.whitelist.urls=${springdoc.api-docs.path}/**,/swagger-ui/**,/h2-console/**
 
 #--------------------GOOGLE OAUTH CREDENTIALS-----------------
 oauth.client.id = 458051927263-8cjgc9k6e98gtosb54458q92jgoh58ev.apps.googleusercontent.com
+
+#--------------------Configured AcceptHeaderLocaleResolver to automatically resolve the locale based on the Accept-Language header. Default is en_US-----------------
+spring.mvc.locale=en_US
