README.md for backend

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,11 +1,6 @@
-spring.config.import=classpath:secrets.properties,classpath:jwt.properties,classpath:route.properties,classpath:mail-dev.properties,classpath:password.properties,classpath:scheduler.properties,classpath:exchange.rate.properties
+spring.config.import=classpath:database-dev.properties,classpath:secrets.properties,classpath:jwt.properties,classpath:route.properties,classpath:mail-dev.properties,classpath:password.properties,classpath:scheduler.properties,classpath:exchange.rate.properties
 
 server.port=8085
-
-#--------------------- DB Connection ------------------
-spring.datasource.name=moneytransfer
-spring.datasource.generate-unique-name=false
-spring.h2.console.enabled=true
 
 # Logging level for root logger
 logging.level.root=info
