--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,17 @@
 #-------------------- server properties ---------------
-spring.application.name=money-transfer
+spring.application.name=fast-cash
+spring.profiles.active=dev
 
 app.companyName=Fast Cash
 app.companyPage=http://localhost:8085
-app.admin.email=user@moneytransfer.com
+app.admin.email=user@fastcash.com
 app.admin.password=P@ssword1$
 app.admin.user.roles=ADMIN
 app.logoUrl=${app.companyPage}/logo512.png
 endpoint.resetPasswordUrl=${app.companyPage}${endpoint.password}${endpoint.password.reset}
 
-spring.profiles.active=dev
-
 #--------------------CORS-----------------
 allowed.origins = ${app.companyPage},http://localhost:3000
-
-#--------------------JPA-ORM Properties-----------------
-spring.data.jpa.repositories.bootstrap-mode=default
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.open-in-view=false
 
 spring.output.ansi.enabled=always
 
