--- a/pom.xml
+++ b/pom.xml
@@ -79,10 +79,15 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+	      <groupId>com.mysql</groupId>
+	      <artifactId>mysql-connector-j</artifactId>
+	      <scope>runtime</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>com.h2database</groupId>
+	      <artifactId>h2</artifactId>
+	      <scope>runtime</scope>
+	    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -126,6 +131,7 @@
 			    <version>3.1.0</version>
 			    <executions>
 			        <execution>
+			        	<?m2e ignore?>
 			            <id>install-frontend-dependencies</id>
 			            <phase>generate-sources</phase>
 			            <goals>
@@ -140,6 +146,7 @@
 			            </configuration>
 			        </execution>
 			        <execution>
+			        	<?m2e ignore?>
 			            <id>build-and-include-frontend</id>
 			            <phase>generate-sources</phase>
 			            <goals>
