--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 server.port=8086
 
-spring.config.import=classpath:secrets.properties,classpath:jwt.properties,classpath:route.properties,classpath:mail.properties,classpath:password.properties,classpath:scheduler.properties,classpath:password.properties,classpath:scheduler.properties,classpath:exchange.rate.properties
+spring.config.import=classpath:database-prod.properties,classpath:secrets.properties,classpath:jwt.properties,classpath:route.properties,classpath:mail.properties,classpath:password.properties,classpath:scheduler.properties,classpath:password.properties,classpath:scheduler.properties,classpath:exchange.rate.properties
 
 
 # Logging level for root logger
