LazyLoadingInitializationException with MySQL

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,6 +13,6 @@ logging.level.org.hibernate=error
 logging.level.org.springframework.security=debug
 logging.level.com.fastcash.moneytransfer=info
 
-springdoc.swagger-ui.enabled=false
+springdoc.swagger-ui.enabled=true
 
 spring.devtools.add-properties=false
