--- a/src/main/resources/database-dev.properties
+++ b/src/main/resources/database-dev.properties
@@ -1,4 +1,4 @@
-#--------------------- DB Connection ------------------
+#--------------------- DB Connection H2 ------------------
 spring.datasource.name=moneytransfer
 spring.datasource.generate-unique-name=false
 spring.h2.console.enabled=true
@@ -9,3 +9,17 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
+
+#--------------------- DB Connection MySQL ------------------
+#spring.datasource.url=jdbc:mysql://localhost:3306/springboot_db
+#spring.datasource.username=root
+#spring.datasource.password=blessing95
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## JPA (Hibernate) properties
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.open-in-view=false
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
