added Docker support

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
 spring.config.import=classpath:database-dev.properties,classpath:secrets.properties,classpath:jwt.properties,classpath:route.properties,classpath:mail-dev.properties,classpath:password.properties,classpath:scheduler.properties,classpath:exchange.rate.properties
 
 server.port=8085
+app.companyPage=http://localhost:${server.port}
 
 # Logging level for root logger
 logging.level.root=info
