--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,10 @@
-databases:
-  - name: db # Render PG14
-    databaseName: db
-    user: dbuser
-    postgresMajorVersion: "10"
-
 services:
   - type: web  # Since Render doesn't have a direct "service" type for arbitrary containers, use "web"
     name: mysql
     runtime: docker
     dockerfilePath: ./sql.Dockerfile  # Path to your custom Dockerfile
+    region: frankfurt
+    plan: free
     envVars:
       - key: PORT
         value: 3036  # Expose the MySQL port internally
@@ -21,6 +17,9 @@ services:
     name: springboot-app
     runtime: docker
     dockerfilePath: ./app.Dockerfile
+    region: frankfurt
+    plan: free
+    healthCheckPath: /
     envVars:
       - key: SPRING_DATASOURCE_URL
         value: jdbc:mysql://mysql:3306/springboot_db?autoReconnect=true
