--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,7 +1,7 @@
 server.port=8086
 app.companyPage=http://localhost:${server.port}
 
-spring.config.import=classpath:database-docker.properties,classpath:secrets.properties,classpath:jwt.properties,classpath:route.properties,classpath:mail.properties,classpath:scheduler.properties,classpath:password.properties,classpath:exchange.rate.properties
+spring.config.import=classpath:database-docker.properties,optional:classpath:secrets.properties,classpath:jwt.properties,classpath:route.properties,optional:classpath:mail.properties,classpath:scheduler.properties,classpath:password.properties,optional:classpath:exchange.rate.properties
 
 # Logging level for root logger
 logging.level.root=info
