preparing production build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,37 +1,103 @@
-#-------------------- server properties ---------------
-spring.application.name=fast-cash
-spring.profiles.active=dev
+#-------------------- Profile Configuration --------------------
+spring.profiles.active=prod
 
+#--------------------- DB Connection ------------------------
+spring.datasource.name=${SPRING_DATASOURCE_NAME}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+#-------------------- App Configuration---------------------------
 app.companyName=Fast Cash
 app.admin.email=user@fastcash.com
 app.admin.password=P@ssword1$
 app.admin.user.roles=ADMIN
 app.logoUrl=${app.companyPage}/logo512.png
-endpoint.resetPasswordUrl=${app.companyPage}${endpoint.password}${endpoint.password.reset}
 
-#--------------------CORS-----------------
-allowed.origins = ${app.companyPage},http://localhost:3000
-
-spring.output.ansi.enabled=always
-
+#-------------------- Logging Configuration -----------------------
 # Set the logging pattern for the console
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] %c{1.} [%t] %m%n
-
 # Set the logging pattern for the file
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] %c{1.} [%t] %m%n
 
+#-------------------- Swagger API Configuration -------------------
 bearer.security.scheme.name=Bearer Key
 basic.security.scheme.name=Basic Auth
-
 springdoc.api-docs.path=/api/v3/api-docs
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 
+#-------------------- Spring Security Whitelist URL -----------------
 auth.whitelist.urls=${springdoc.api-docs.path}/**,/swagger-ui/**,/h2-console/**
 
-#--------------------GOOGLE OAUTH CREDENTIALS-----------------
-oauth.client.id = 458051927263-8cjgc9k6e98gtosb54458q92jgoh58ev.apps.googleusercontent.com
-
-#--------------------Configured AcceptHeaderLocaleResolver to automatically resolve the locale based on the Accept-Language header. Default is en_US-----------------
+#-------------------- Configured AcceptHeaderLocaleResolver to automatically resolve the locale based on the Accept-Language header. Default is en_US -----------------
 spring.mvc.locale=en_US
+
+#--------------------JPA Configuration ------------------------------
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+# -----------------Exchange Rate API Placeholders-----------------
+exchange.rate.api.url=${EXCHANGE_RATE_API_URL}
+exchange.rate.api.key=${EXCHANGE_RATE_API_KEY}
+exchange.rate.api.plan=${EXCHANGE_RATE_API_PLAN}
+
+#-------------------- CORS Configuration ------------------------
+allowed.origins = ${ALLOWED_ORIGINS}
+
+#-------------------- GOOGLE OAUTH CREDENTIALS ------------------
+oauth.client.id = ${OAUTH_CLIENT_ID}
+
+#--------------------JWT Configuration ---------------------------
+jwt.expires.in.hours=${JWT_EXPIRES_IN_HOURS}
+jwt.refreshExpirationMs=${JWT_REFRESH_EXPIRATION_MS}
+
+# ----------------- Scheduler Configuration -----------------------
+# Run the task every 60 seconds (1 minute)
+retry.interval=60000
+
+# Initial delay of 30 seconds before the first execution
+retry.initialDelay=30000
+
+# ----------------- SMTP Configuration ----------------------------
+# SMTP Server Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=olayiwola72@gmail.com
+spring.mail.password=wypq qwya kklh jqfe
+
+# Other SMTP properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+# ----------------- Password Configuration --------------------------
+# Regex
+password.regex=^(?=.*[A-Z])(?=.*[!@#$%^&*()-+=])(.{6,})$
+
+#--------------------URL Configuration-------------------------------
+api.base.url=/api/v1
+endpoint.auth=/auth
+endpoint.token=/token
+endpoint.token.refresh=${endpoint.token}/refresh
+endpoint.login=/login
+endpoint.user=/user
+endpoint.account=/account
+endpoint.transfer=/transfer
+endpoint.password=/password
+endpoint.password.forgot=/forgot
+endpoint.password.reset=/reset
+endpoint.exchange.rate=/exchange-rate
+endpoint.resetPasswordUrl=${app.companyPage}${endpoint.password}${endpoint.password.reset}
+
+# ----------------- RSA Keys Configuration ----------------------------
+rsa.private-key=src/main/resources/certs/private.pem
+rsa.public-key=src/main/resources/certs/public.pem
+
+# ----------------- Terminal Configuration -----------------------------
+spring.output.ansi.enabled=always
+
