--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,14 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		
+		<!-- spring-dotenv library by Paul Schwarz to load environment variables from a .env file. This library integrates directly with Spring Boot, making it easy to use .env files without needing to manually load the variables using the Dotenv class. -->
+		<dependency>
+		    <groupId>me.paulschwarz</groupId>
+		    <artifactId>spring-dotenv</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+		
 		<!-- Spring Boot Starter Mail for sending emails -->
 	    <dependency>
 	        <groupId>org.springframework.boot</groupId>
