--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,20 +1,23 @@
-spring.config.import=classpath:database-dev.properties,classpath:secrets.properties,classpath:jwt.properties,classpath:route.properties,classpath:mail-dev.properties,classpath:password.properties,classpath:scheduler.properties,classpath:exchange.rate.properties
-
+#-------------------- ----- Server Port  ------------------------
 server.port=8085
+
+#-------------------- App Configuration -------------------------
 app.companyPage=http://localhost:${server.port}
 
+#--------------------- DB Connection (H2) ------------------------
+spring.datasource.generate-unique-name=false
+spring.h2.console.enabled=true
+
+#-------------------- Logging Configuration ---------------------
 # Logging level for root logger
 logging.level.root=info
-
 logging.level.web=debug
-
 # Logging level for specific packages or classes
 logging.level.org.springframework.web=trace
 logging.level.org.springframework.security=trace
-
 logging.level.org.hibernate=error
 logging.level.org.hibernate.SQL=DEBUG
-
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+#-------------------- Swagger API Configuration -----------------
 springdoc.swagger-ui.enabled=true
