--- a/render.yaml
+++ b/render.yaml
@@ -6,8 +6,8 @@ services:
     region: frankfurt
     plan: free
     envVars:
-      - key: PORT
-        value: 3036  # Expose the MySQL port internally
+      # - key: PORT
+      #   value: 3036  # Expose the MySQL port internally
       - key: MYSQL_ROOT_PASSWORD
         value: root
       - key: MYSQL_DATABASE
@@ -22,6 +22,18 @@ services:
     healthCheckPath: /
     envVars:
       - key: SPRING_DATASOURCE_URL
-        value: jdbc:mysql://mysql:3306/springboot_db?autoReconnect=true
+        value: jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/springboot_db?autoReconnect=true
+
+      - key: MYSQL_HOST
+        fromService: # Reference a property from another service (see available properties below)
+          type: web
+          name: mysql
+          property: host
+      - key: MYSQL_PORT
+        fromService:
+          type: web
+          name: mysql
+          property: port
+          
       - key: PORT
-        value: 8086  # Expose the port the app runs on
+        value: 10000  # Expose the port the app runs on
