--- a/render.yaml
+++ b/render.yaml
@@ -39,11 +39,10 @@ services:
           name: mysql
           property: host
       - key: SPRING_DATASOURCE_PORT
-        value: 0.0.0.0
-        # fromService:
-        #   type: web
-        #   name: mysql
-        #   property: port
+        fromService:
+          type: web
+          name: mysql
+          property: port
       # - key: SPRING_DATASOURCE_SCHEMA
       #   fromService:
       #     type: web
