--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,7 @@ services:
     region: frankfurt
     plan: free
     healthCheckPath: /
+    dockerfilePath: ./app.Dockerfile
     envVars:
       - key: SPRING_DATASOURCE_CONNECTION_STRING
         fromDatabase:
