--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
+#-------------------- # JPA (Hibernate) properties ------------------------
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
+spring.jpa.open-in-view=false
+
 #-------------------- App Configuration---------------------------
 app.companyName=Fast Cash
 app.admin.email=user@fastcash.com
