--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 #-------------------------- Server Port  --------------------------------
-server.port=8086
+server.port=${SERVER_PORT: 8086}
 
 #-------------------- App Configuration ---------------------------------
 app.companyPage=http://localhost:${server.port}
