- Refactoring application properties to use ConfigurationProperties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -88,20 +88,22 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 # Regex
 password.regex=^(?=.*[A-Z])(?=.*[!@#$%^&*()-+=])(.{6,})$
 
-#--------------------URL Configuration-------------------------------
-api.base.url=/api/v1
-endpoint.auth=/auth
-endpoint.token=/token
-endpoint.token.refresh=${endpoint.token}/refresh
-endpoint.login=/login
-endpoint.user=/user
-endpoint.account=/account
-endpoint.transfer=/transfer
-endpoint.password=/password
-endpoint.password.forgot=/forgot
-endpoint.password.reset=/reset
-endpoint.exchange.rate=/exchange-rate
-endpoint.resetPasswordUrl=${app.companyPage}${endpoint.password}${endpoint.password.reset}
+#--------------------Request Mapping Configuration-------------------
+app.api.version=/v1
+app.api.base-url=/api
+app.api.config-path=/config
+app.api.auth-path=/auth
+app.api.token-path=/token
+app.api.token-refresh-path=${app.api.token-path}/refresh
+app.api.login-path=/login
+app.api.user-path=/user
+app.api.account-path=/account
+app.api.transfer-path=/transfer
+app.api.password-path=/password
+app.api.password-forgot-path=/forgot
+app.api.password-reset-path=/reset
+app.api.exchange-rate-path=/exchange-rate
+app.api.reset-password-url-path=${app.companyPage}${app.api.password-path}${app.api.password-reset-path}
 
 # ----------------- RSA Keys Configuration ----------------------------
 rsa.private-key=src/main/resources/certs/private.pem
