--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,8 +2,18 @@
 app.companyPage=http://localhost:${server.port}
 
 #--------------------- DB Connection (H2) ------------------------
-spring.datasource.generate-unique-name=false
+# H2 Database settings
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.platform=h2
+# Enable H2 Console
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#-------------------- # JPA (Hibernate) properties ------------------------
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 #-------------------- Logging Configuration ---------------------
 # Logging level for root logger
