--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
-#-------------------- App Configuration -------------------------
+#-------------------- App Configuration ------------------------------
 app.companyPage=http://localhost:${server.port}
 
-#--------------------- DB Connection (H2) ------------------------
+#--------------------- DB Connection (H2) -----------------------------
 # H2 Database settings
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -15,7 +15,7 @@ spring.h2.console.path=/h2-console
 #-------------------- # JPA (Hibernate) properties ------------------------
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-#-------------------- Logging Configuration ---------------------
+#-------------------- Logging Configuration -------------------------------
 # Logging level for root logger
 logging.level.root=info
 logging.level.web=debug
@@ -28,3 +28,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #-------------------- Swagger API Configuration -----------------
 springdoc.swagger-ui.enabled=true
+
+#-------------------- Flyway database migration configuration ---------------
+spring.flyway.locations=classpath:db/migration/dev
