--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -21,3 +21,6 @@ springdoc.swagger-ui.enabled=true
 
 #-------------------- Devtools  Configuration -----------------------------
 spring.devtools.add-properties=false
+
+#-------------------- Flyway database migration configuration ---------------
+spring.flyway.locations=classpath:db/migration/prod
