app company name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,10 @@ app.companyName=Fast Cash
 app.admin.email=user@fastcash.com
 app.admin.password=P@ssword1$
 app.admin.user.roles=ADMIN
-app.logoUrl=${app.companyPage}/logo512.png
+
+#-------------------- App Configuration ---------------------------------
+app.company.page=${APP_COMPANY_PAGE: http://localhost:${server.port}}
+app.logoUrl=${app.company.page}/logo512.png
 
 #-------------------- Logging Configuration -----------------------
 # Set the logging pattern for the console
@@ -103,7 +106,7 @@ app.api.password-path=/password
 app.api.password-forgot-path=/forgot
 app.api.password-reset-path=/reset
 app.api.exchange-rate-path=/exchange-rate
-app.api.reset-password-url-path=${app.companyPage}${app.api.password-path}${app.api.password-reset-path}
+app.api.reset-password-url-path=${app.company.page}${app.api.password-path}${app.api.password-reset-path}
 
 # ----------------- RSA Keys Configuration ----------------------------
 rsa.private-key=src/main/resources/certs/private.pem
