--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,9 @@ jobs:
         submodules: true # Initialize and update submodules
         fetch-depth: 0   # Ensure all history is fetched so that submodules can be correctly checked out
 
+    - name: Create .env file
+      run: echo "${{ secrets.DOTENV_FILE_FAST_CASH }}" > .env
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -34,7 +37,7 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
+      
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
