--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,12 @@ jobs:
     - name: Create .env file
       run: echo "${{ secrets.DOTENV_FILE_FAST_CASH }}" > .env
 
+    - name: Load .env file
+      run: |
+        set -o allexport
+        source .env
+        set -o allexport
+        
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -37,3 +43,11 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+    - name: Deploy using API hook
+      uses: actions/checkout@v4
+      if: github.ref == 'refs/heads/main'
+      env: 
+        deploy_url: ${{ env.DEPLOY_HOOK_URL }}
+
+    - run: curl "$env:deploy_url"
