--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,12 @@ jobs:
     - name: Load .env file
       run: |
         set -o allexport
-        source .env
+        while IFS='=' read -r key value; do
+          if [[ $value == \"*\" ]]; then
+            value=${value:1:-1}  # Remove leading and trailing double quotes
+          fi
+          export "$key=$value"
+        done < .env
         set -o allexport
         
     - name: Set up JDK 17
