--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,12 +31,7 @@ jobs:
     - name: Load .env file
       run: |
         set -o allexport
-        while IFS='=' read -r key value; do
-          if [[ $value == \"*\" ]]; then
-            value=${value:1:-1}  # Remove leading and trailing double quotes
-          fi
-          export "$key=$value"
-        done < .env
+        source .env
         set -o allexport
         
     - name: Set up JDK 17
