--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,12 +28,6 @@ jobs:
     - name: Create .env file
       run: echo "${{ secrets.DOTENV_FILE_FAST_CASH }}" > .env
 
-    - name: Load .env file
-      run: |
-        set -o allexport
-        source .env
-        set -o allexport
-        
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -50,4 +44,9 @@ jobs:
       env: 
         deploy_url: ${{ env.DEPLOY_HOOK_URL }}
 
-    - run: curl $env:deploy_url
+    - name: Deploy
+      uses: actions/checkout@v4
+      # Only run this step if the branch is main
+      if: github.ref == 'refs/heads/main'
+      env:
+        deploy_url: ${{ env.RENDER_DEPLOY_HOOK_URL }}
