Update maven.yml with NPM and deploy hook with secrets

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,9 +40,12 @@ jobs:
 
     - name: Deploy
       uses: actions/checkout@v4
+      with:
+        submodules: true # Initialize and update submodules
+        fetch-depth: 0   # Ensure all history is fetched so that submodules can be correctly checked out
       # Only run this step if the branch is main
       if: github.ref == 'refs/heads/main'
       env:
-        deploy_url: ${{ env.RENDER_DEPLOY_HOOK_URL }}
+        deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         run: |
           curl "$deploy_url"
