db password reset token service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=${SERVER_PORT:8085}
 
 #-------------------- Profile Configuration --------------------
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 #--------------------- DB Connection ------------------------
 spring.datasource.name=${SPRING_DATASOURCE_NAME}
@@ -112,6 +112,7 @@ app.api.reset-password-url-path=${app.company.page}${app.api.password-path}${app
 rsa.private-key=src/main/resources/certs/private.pem
 rsa.public-key=src/main/resources/certs/public.pem
 
-# ----------------- Terminal Configuration -----------------------------
+# ----------------- Terminal Configuration ----------------------------
 spring.output.ansi.enabled=always
+
 
