--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -25,3 +25,9 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #-------------------- Swagger API Configuration -----------------
 springdoc.swagger-ui.enabled=true
+
+# ----------------- Flyway configuration ------------------------------
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration/H2/structure,classpath:db/H2/migration/data
+spring.flyway.validate-on-migrate=true
+spring.flyway.baseline-on-migrate=true
