--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=${SERVER_PORT:8085}
 
 #-------------------- Profile Configuration --------------------
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 #--------------------- DB Connection ------------------------
 spring.datasource.name=${SPRING_DATASOURCE_NAME}
