--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,7 @@ services:
     name: fast-cash
     runtime: docker
     region: frankfurt
+    autoDeploy: false
     plan: free
     healthCheckPath: /
     dockerfilePath: ./app.Dockerfile
