--- a/render.yaml
+++ b/render.yaml
@@ -18,30 +18,38 @@ services:
       - key: SPRING_PROFILES_ACTIVE
         value: prod # set profile
       - key: SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT
-        value: org.hibernate.dialect.PostgreSQLDialect
-      - key: SPRING_DATASOURCE_CONNECTION_STRING
-        fromDatabase:
-          name: postgresql
-          property: connectionString
-      - key: SPRING_DATASOURCE_USERNAME
-        fromDatabase:
-          name: postgresql
-          property: user
-      - key: SPRING_DATASOURCE_PASSWORD
-        fromDatabase:
-          name: postgresql
-          property: password
-      - key: SPRING_DATASOURCE_HOST
-        fromDatabase:
-          name: postgresql
-          property: host
-      - key: SPRING_DATASOURCE_PORT
-        fromDatabase:
-          name: postgresql
-          property: port
-      - key: SPRING_DATASOURCE_NAME
-        fromDatabase:
-          name: postgresql
-          property: database
+        value: org.hibernate.dialect.H2Dialect
       - key: SPRING_DATASOURCE_URL
-        value: jdbc:postgresql://${SPRING_DATASOURCE_HOST}:${SPRING_DATASOURCE_PORT}/${SPRING_DATASOURCE_NAME}
+        value: jdbc:h2:mem:fastcashdb
+      - key: SPRING_DATASOURCE_USERNAME
+        value: sa
+      - key: SPRING_DATASOURCE_PLATFORM
+        value: h2
+      # - key: SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT
+      #   value: org.hibernate.dialect.PostgreSQLDialect
+      # - key: SPRING_DATASOURCE_CONNECTION_STRING
+      #   fromDatabase:
+      #     name: postgresql
+      #     property: connectionString
+      # - key: SPRING_DATASOURCE_USERNAME
+      #   fromDatabase:
+      #     name: postgresql
+      #     property: user
+      # - key: SPRING_DATASOURCE_PASSWORD
+      #   fromDatabase:
+      #     name: postgresql
+      #     property: password
+      # - key: SPRING_DATASOURCE_HOST
+      #   fromDatabase:
+      #     name: postgresql
+      #     property: host
+      # - key: SPRING_DATASOURCE_PORT
+      #   fromDatabase:
+      #     name: postgresql
+      #     property: port
+      # - key: SPRING_DATASOURCE_NAME
+      #   fromDatabase:
+      #     name: postgresql
+      #     property: database
+      # - key: SPRING_DATASOURCE_URL
+      #   value: jdbc:postgresql://${SPRING_DATASOURCE_HOST}:${SPRING_DATASOURCE_PORT}/${SPRING_DATASOURCE_NAME}
